{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 46,
  "lineage": "33611bb9-fed9-ecbe-18b2-f2b0c0e1f226",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prime-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:internet-gateway/igw-0a13f1629e4e2eea6",
            "id": "igw-0a13f1629e4e2eea6",
            "owner_id": "341380983851",
            "tags": {
              "Name": "prime-igw"
            },
            "tags_all": {
              "Name": "prime-igw"
            },
            "vpc_id": "vpc-05a6c993f6acb429e"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-private-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:route-table/rtb-0a71bd9bbf91e5b6f",
            "id": "rtb-0a71bd9bbf91e5b6f",
            "owner_id": "341380983851",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prime-private-route_table"
            },
            "tags_all": {
              "Name": "prime-private-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a6c993f6acb429e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-pub-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:route-table/rtb-00e3d47d3bbd720c4",
            "id": "rtb-00e3d47d3bbd720c4",
            "owner_id": "341380983851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a13f1629e4e2eea6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prime-pub-route_table"
            },
            "tags_all": {
              "Name": "prime-pub-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a6c993f6acb429e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03737948da8f78128",
            "route_table_id": "rtb-0a71bd9bbf91e5b6f",
            "subnet_id": "subnet-0293ea57307c8e284"
          },
          "dependencies": [
            "aws_route_table.prime-private-route_table",
            "aws_subnet.prime-priv1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ac7b035dffd5fe",
            "route_table_id": "rtb-0a71bd9bbf91e5b6f",
            "subnet_id": "subnet-0e40e5f656d9fdbbc"
          },
          "dependencies": [
            "aws_route_table.prime-private-route_table",
            "aws_subnet.prime-prive2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e42f5af0302a3c4",
            "route_table_id": "rtb-00e3d47d3bbd720c4",
            "subnet_id": "subnet-0e4c3f14c3c9314cd"
          },
          "dependencies": [
            "aws_route_table.prime-pub-route_table",
            "aws_subnet.prime-pub1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072d33b4af4d82713",
            "route_table_id": "rtb-00e3d47d3bbd720c4",
            "subnet_id": "subnet-0c9ca1b7a12defa55"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route_table",
            "aws_subnet.prime-pub2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:subnet/subnet-0293ea57307c8e284",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0293ea57307c8e284",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "341380983851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-piv1"
            },
            "tags_all": {
              "Name": "prime-piv1"
            },
            "vpc_id": "vpc-05a6c993f6acb429e"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-prive2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:subnet/subnet-0e40e5f656d9fdbbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e40e5f656d9fdbbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "341380983851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-prive2"
            },
            "tags_all": {
              "Name": "prime-prive2"
            },
            "vpc_id": "vpc-05a6c993f6acb429e"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:subnet/subnet-0e4c3f14c3c9314cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4c3f14c3c9314cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "341380983851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub1"
            },
            "tags_all": {
              "Name": "prime-pub1"
            },
            "vpc_id": "vpc-05a6c993f6acb429e"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:subnet/subnet-0c9ca1b7a12defa55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9ca1b7a12defa55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "341380983851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub2"
            },
            "tags_all": {
              "Name": "prime-pub2"
            },
            "vpc_id": "vpc-05a6c993f6acb429e"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341380983851:vpc/vpc-05a6c993f6acb429e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d8a5e6c79a95619",
            "default_route_table_id": "rtb-0d6f1a57b20737c00",
            "default_security_group_id": "sg-061ac1b4ab02285be",
            "dhcp_options_id": "dopt-06aae1434e08fa7cb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a6c993f6acb429e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6f1a57b20737c00",
            "owner_id": "341380983851",
            "tags": {
              "Name": "prime"
            },
            "tags_all": {
              "Name": "prime"
            }
          }
        }
      ]
    }
  ]
}